# MvHPE3D

./: .gitignore  .gitmodules  AGENTS.md  README.md  demo.sh  main.py  pyproject.toml  test.sh  train.sh  vis.sh  vis_video.sh
configs/: config.yaml
docs/: behave_stage2_heatformer_protocol.md  h36m_run207_ablation_study.md  mpi_inf_3dhp_smpl_fitting_plan.md  stage2_joint_graph_refiner.md  stage2_joint_residual.md  stage2r_rgb_guided_residual_refiner.md  stage3_temporal_refine.md  stage3_view_time_token.md  stage4_multi_human_association.md
scripts/: build_humman_stage1_manifest.py  build_mpi_inf_3dhp_stage2_manifest.py  debug_visualize_panoptic_inputs.py  demo_video_2d_3d_compare.py  demo_video_2x2_mesh_compare.py  evaluate_mpi_inf_3dhp_gt_smpl_fit.py  extract_mpi_inf_3dhp_frames.py  filter_panoptic_stage1_manifest.py  fit_mpi_inf_3dhp_gt_smpl.py  infer_multiview.py  optimize_h36m_stage2_reprojection.py  precompute_input_smpl.py  precompute_panoptic_gt_smpl.py  precompute_rgb_features.py  prepare_behave_stage2.py  render_smpl_depth_image.py  render_smpl_normal_image.py  render_smpl_part_segmentation.py  run_behave_sam3dbody_multigpu.py  run_behave_stage2_after_sam.sh  run_mpi_inf_3dhp_gt_smpl_fit_multigpu.py  run_mpi_inf_3dhp_sam3dbody_multigpu.py  run_precompute_input_smpl_multigpu.py  save_panoptic_sam3dbody.py  save_sam3dbody_smpl.sh  stage2u_hparam_dashboard.py  test.py  test_fusion.sh  test_panoptic_fusion.sh  train.py  train_fusion.sh  train_h36m_stage2_1_root_adapter.py  train_h36m_stage2_2_gated_body_adapter.py  train_h36m_stage2_unified_backbone_root_body.py  visualize.py  visualize_mpi_inf_3dhp_stage2_samples.py  visualize_video.py  visualize_video_new.py
tests/: conftest.py  test_canonicalization.py  test_dataset.py  test_infer_multiview.py  test_manifest_builder.py  test_metrics.py  test_mhr_smpl_conversion.py  test_mpi_inf_3dhp.py  (+5 more)
(+103 files in other folders)
