[project]
name = "mvhpe3d"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "appdirs>=1.4.4",
    "appnope>=0.1.4",
    "black>=26.3.1",
    "chump>=1.6.0",
    "chumpy",
    "cython>=3.2.4",
    "detectron2",
    "dill>=0.4.1",
    "einops>=0.8.2",
    "ffmpeg>=1.4",
    "fvcore>=0.1.5.post20221221",
    "huggingface-hub>=1.8.0",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "hydra-submitit-launcher>=1.2.0",
    "joblib>=1.5.3",
    "jsonlines>=4.0.0",
    "lightning>=2.6.1",
    "loguru>=0.7.3",
    "mhr",
    "moge",
    "networkx==3.2.1",
    "opencv-python>=4.13.0.92",
    "optree>=0.19.0",
    "pandas>=3.0.1",
    "pycocotools>=2.0.11",
    "pymomentum-gpu>=0.1.107.post13",
    "pyrender>=0.1.45",
    "pyrootutils>=1.0.4",
    "pytest>=9.0.2",
    "pytorch-lightning>=2.6.1",
    "rich>=14.3.3",
    "roma>=1.5.6",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "smplx>=0.1.28",
    "tensorboard>=2.20.0",
    "timm>=1.0.26",
    "torch>=2.8.0,<2.9",
    "tqdm>=4.67.3",
    "trimesh>=4.11.5",
    "wandb>=0.25.1",
    "webdataset>=1.0.2",
    "xtcocotools>=1.14.3",
    "yacs>=0.1.8",
]

[tool.uv.extra-build-dependencies]
xtcocotools = ["numpy"]
detectron2 = ["torch"]
chumpy = ["pip"]

[tool.uv.sources]
detectron2 = { git = "https://github.com/facebookresearch/detectron2.git", rev = "a1ce2f9" }
moge = { git = "https://github.com/microsoft/MoGe.git" }
mhr = { workspace = true, editable = true }
chumpy = { git = "https://github.com/mattloper/chumpy" }

[tool.uv.workspace]
members = [
    "external/MHR",
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
